--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/ejvelasco/insightful-dashboard#readme",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "chart.js": "^2.7.3",
+    "color": "^3.1.0",
     "react": "^16.8.2",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.2"
   },
   "devDependencies": {
