--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "color": "^3.1.0",
     "react": "^16.8.2",
     "react-chartjs-2": "^2.7.4",
-    "react-dom": "^16.8.2"
+    "react-dom": "^16.8.2",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "typescript": "^3.3.3"
